fix(ww): align bottoms of variant texts, add space before parenthesis

--- a/wordweb-app/src/main/resources/scss/pages/_search.scss
+++ b/wordweb-app/src/main/resources/scss/pages/_search.scss
@@ -871,6 +871,7 @@ span.material-symbols-outlined {
 
 .variants {
   display: flex;
+  align-items: baseline;
   font-size: 0.875rem;
   color: var(--color-dark-blue);
   margin-top: 8px;
