--- a/wordweb-app/src/main/resources/view/css/styles.css
+++ b/wordweb-app/src/main/resources/view/css/styles.css
@@ -15534,6 +15534,7 @@ span.material-symbols-outlined--filled {
 }
 .variants {
   display: flex;
+  align-items: baseline;
   font-size: 0.875rem;
   color: var(--color-dark-blue);
   margin-top: 8px;
